--- a/frontend/src/components/Login/login.module.css
+++ b/frontend/src/components/Login/login.module.css
@@ -10,10 +10,11 @@
     height: 50%;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
     justify-content: space-evenly;
 
 }
+
 .form {
     display: flex;
     flex-direction: column;
