--- a/frontend/src/components/Signup/signup.module.css
+++ b/frontend/src/components/Signup/signup.module.css
@@ -22,7 +22,7 @@
     height: 50%;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
     justify-content: space-evenly;
 
 }
